--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
         #container{
             width: 100vw;
-            height: 300vh;
+            height: 200vh;
             /* border: 2px solid black; */
             background-color: rgb(233, 180, 111);
 
@@ -31,12 +31,12 @@
         #top1{
               width: 80vw;
               height: 7vh;
-              border: 1px solid black;
+              /* border: 1px solid black; */
               margin-left: 10vw;
               margin-top: 2vh;
-              background-color: lightgreen;
+              background-color: rgb(233, 180, 111);
               border-radius: 10px;
-              font-size: 1.6rem;
+              font-size: 2.5rem;
               font-weight: 1000;
               color: blueviolet;
               text-align: center;
@@ -64,14 +64,14 @@
         }
         #middle{
             width: 94vw;
-            height: 300vh;
+            height: 230vh;
             border: 1px solid black;
             margin-left: 3vw;
             margin-top: 2vh;
             display: flex;
             flex-wrap: wrap;
             align-content: start;
-            /* transform: scaleX(1.1); */
+            /* transform: scaleX(1.003); */
             background-color: rgb(241, 79, 79);
             border-radius: 10px;
 
@@ -317,7 +317,7 @@
       <div id="top">
         <div id="topsub">This Is a Collection Of Notebooks. To Buy, Contact P Nandy</div>
       </div>
-      <div id="top1">P.Nandy</div>
+      <div id="top1">Note Book House</div>
       <div id="middle">
         <div id="item1" class="item">
            <div id="nb1" class="nb">
