--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             margin-left: 6vw;
             overflow: hidden;
             background-color: rgb(226, 226, 101);
+            border-radius: 7px;
         }
         .details{
             width: 30vw;
@@ -503,6 +504,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
