Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             display: flex;
             flex-wrap: wrap;
             align-content: start;
-            /* transform: scaleX(1.003); */
+            transform: scaleX(1.03); 
             background-color: rgb(241, 79, 79);
             border-radius: 10px;
 
@@ -504,6 +504,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
